update the rediction

--- a/src/components/Loop-grid/styles.css
+++ b/src/components/Loop-grid/styles.css
@@ -1,34 +1,75 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 16px;
+    gap: 30px;
     margin-bottom: 16px;
   }
   
+
   .grid-item {
-    border: 1px solid #ddd;
-    border-radius: 8px;
+    position: relative;
+    border-radius: 5px;
     overflow: hidden;
     background: #fff;
     text-align: center;
-    padding: 16px;
+    
   }
   
-  .grid-item img {
+  .article .featured-image {
     width: 100%;
-    height: 150px;
+    height: 390px;
     object-fit: cover;
+    object-position: left;
+  }
+  .article_date{
+    
+    padding: 6px 12px 9px 12px;
+    gap: 0px;
+    border-radius: 2px;
+    background-color: var(--trinity-blue);
+    color: var(--trinity-white);
+    position: absolute;
+    top: 4%;
+    left: 8%;
+  }
+  .rt-holder{
+    padding-top: 10px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .article-title{
+ 
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.5px;
+    text-align: left;
+    border-bottom: 1px solid #0000000A;
+    padding-bottom: 20px;
+    padding-top: 25px;
+    
+   
+  }
+  .card-bottom-elements{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
   .category {
-    display: inline-block;
-    margin-top: 8px;
-    padding: 4px 8px;
-    font-size: 12px;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 4px;
+   
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17.07px;
+    text-align: left;
+    color: var(--trinity-blue);
+    
   }
+
+
   
   .pagination {
     display: flex;
@@ -36,7 +77,7 @@
     align-items: center;
   }
   
-  button {
+  .next-btn, .prev-btn {
     padding: 8px 16px;
     border: none;
     background-color: #007bff;
@@ -49,4 +90,14 @@
     background-color: #ccc;
     cursor: not-allowed;
   }
+
+  .read-more-btn-wrapper .read-more-btn{
+    text-decoration: none;
+   
+  }
+  .read-more-btn-wrapper span{
+    color: var(--trinity-dark);
+    border-bottom: 2px solid var(--trinity-dark);
+  }
   
+
