--- a/src/components/Loop-grid/styles.css
+++ b/src/components/Loop-grid/styles.css
@@ -5,7 +5,6 @@
     margin-bottom: 16px;
   }
   
-
   .grid-item {
     position: relative;
     border-radius: 5px;
@@ -73,19 +72,22 @@
   
   .pagination {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
   
   .next-btn, .prev-btn {
-    padding: 8px 16px;
+    padding: 5px 16px;
     border: none;
     background-color: #007bff;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 12px;
     cursor: pointer;
   }
-  
+  .Ellipse-blue{
+    height: 8px;
+    width: 8px;
+  }
   button:disabled {
     background-color: #ccc;
     cursor: not-allowed;
@@ -93,11 +95,57 @@
 
   .read-more-btn-wrapper .read-more-btn{
     text-decoration: none;
-   
   }
   .read-more-btn-wrapper span{
     color: var(--trinity-dark);
-    border-bottom: 2px solid var(--trinity-dark);
+    border-bottom: 2px solid var(--trinity-blue);
+    font-weight: 700;
+    line-height: 19.5px;
+    text-align: left;
+    
+
   }
   
+
+
+
+  /* Style for the pagination dots */
+.dot-pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  align-items: center;
+}
+.article-carousel .carousel-indicators{
+  margin-bottom: 0!important;
+  align-items: center;
+}
+.article-carousel .carousel-indicators button {
+  width: 1px!important;
+  height: 1px!important;
+  margin: 0 5px;
+  border-radius: 50%;
+  background-color: var(--trinity-gray);
+  cursor: pointer;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px!important;
+  background-image: url(/public/images/Ellipse-blue.svg);  
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+
+}
+
+.article-carousel .carousel-indicators button[aria-current="true"] {
+  border: solid 3.3px var(--trinity-blue);
+  
+}
+.article-carousel .carousel-indicators button[aria-current="true"] .Ellipse-blue, .swiper-pagination-bullet:hover .Ellipse-blue{
+  height: 9.5px;
+  width: 9.5px;
+}
+
 
