--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -75,15 +75,34 @@
   .navigation-menu {
     width: 65%;
   }
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+    /* padding: 15px 20px; */
+}
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+  border-radius: 0;
+  border: none;
+}
+}
+
+.dropdown-menu .dropdown-item{
+  
+font-size: 14px;
+font-weight: 400;
+line-height: 26.07px;
+text-align: left;
+
+
 }
 
 .navigation-menu .nav-link:hover,
 .navigation-menu .nav-link.active {
-  color: var(--trinity-blue);
+  color: var(--trinity-blue)!important;
 }
 .navigation-menu .nav-link {
   position: relative;
   font-size: 14px;
+  color: var(--trinity-dark);
 }
 .navigation-menu .nav-link::before {
   content: "";
