--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,20 +1,43 @@
 /* Footer Styles */
+.footer{
+  --bs-gutter-x: 0rem!important;
+  
+}
 .footer-content-wrapper,
 .map-section {
-  width: 50%;
+  
+  overflow: hidden;
 }
+.footerMap{
+  margin-top: -70px;
+  height: calc(100% + 70px);
+}
+
 .footer-content-wrapper {
   background-color: var(--trinity-blue);
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+
+.footer-content-wrapper::after{
+  position: absolute;
+  content: "";
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);;
+}
+
+.inner-content-wrapper{
   justify-content: center;
   align-items: self-start;
-  padding: 60px 40px;
+  padding: 60px 50px;
   gap: 30px;
+  z-index: 1;
 }
-.footer {
-  display: flex;
-}
+
+
 .formWrapper,
 .the-newsLetter {
   width: 100%;
@@ -25,6 +48,7 @@
   font-weight: 700;
   line-height: 30.38px;
   text-align: left;
+  padding-bottom: 20px;
 }
 
 /* Newsletter styles */
@@ -65,6 +89,9 @@
 }
 .quick-links {
   padding-left: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 .footer-links {
   text-decoration: none;
@@ -74,6 +101,9 @@
   font-weight: 400;
   line-height: 15.85px;
   text-align: left;
+}
+.footer-links:hover{
+  color: var(--trinity-yellow);
 }
 
 .the-links .quick-links{
@@ -147,6 +177,75 @@ border-radius: 3px;
 .bottom-section .copyright p{
   color: var(--trinity-white);
   margin-bottom: 0;
+  
+font-size: 13px;
+font-weight: 400;
+line-height: 15.85px;
+
+
 }
  
+/* Responsiveness on small devices   */
+@media (min-width: 768px) AND (max-width: 1024px) {
+  .inner-content-wrapper{
+    padding: 30px 20px;
+  }
+  .contact-info-section{
+    flex-direction: column;
+    gap: 20px;
+  }
+  .newsletterSubmitBtn {
+    width: 40%;
+  }
+  .newsletter-form .mb-3{
+    width: 60%
+  }
+}
+@media(max-width: 767px){
+
+  /* .footer{
+    flex-direction: column-reverse;
+  } */
+  .footer-content-wrapper,
+.map-section {
+  width: 100%;
+}
+  /* Footer map */
+  .footerMap{
+    min-height: 400px;
+  }
+  .inner-content-wrapper{
+    padding: 50px 15px!important;
+  }
+
+  /* Newsletter form style */
+ 
+  .newsletter-form{
+    gap: 0;
+    flex-direction: column;
+  }
+  .newsletterSubmitBtn{
+    width: 50%;
+  }
+  .newsletter-form .mb-3{
+    width: 100%;
+  }
+  /* Footer links */
+  .the-links{
+    flex-direction: column;
+    gap: 0;
+  }
+  .footer-heading{
+    padding-bottom: 10px;
+  }
+  .quick-links{
+    gap: 15px;
+  }
+
+  /* Contact section  */
+  .contact-info-section{
+    flex-direction: column;
+    gap: 20px;
+  }
   
+}
