--- a/src/components/LightBox/Image-LightBox/modal.css
+++ b/src/components/LightBox/Image-LightBox/modal.css
@@ -9,6 +9,7 @@
     background: rgba(27, 27, 27, 0.541);
     display: flex;
     align-items: center;
+    z-index: 9999;
   }
   .overlay img {
     display: block;
@@ -28,13 +29,13 @@
   }
   .overlay-arrows_left {
     display: flex;
-    background-color: #6d6d6d;
+    background-color: #34393b;
     justify-content: space-between;
     position: absolute;
     top: 50%;
     width: 50px;
     height: 50px;
-    left: 0;
+    left: 10%;
     z-index: 999;
   }
   
@@ -50,10 +51,10 @@
   
   .overlay-arrows_right {
     display: flex;
-    background-color: #6d6d6d;
+    background-color: #34393b;
     justify-content: space-between;
     position: absolute;
-    right: 0;
+    right: 10%;
     width: 50px;
     height: 50px;
     top: 50%;
