--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -126,7 +126,7 @@ height: 6px;
 border-radius: 3px;
 
 
-  background-image: url('/public/images/Footer-links.svg'); /* Set marker image */
+  background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Footer-links.svg'); /* Set marker image */
   background-size: cover; 
 }
 
