--- a/src/pages/Contact-Us/Contact.css
+++ b/src/pages/Contact-Us/Contact.css
@@ -23,7 +23,7 @@
 }
 
 .get-in-touch {
-    background-image: url('public/images/Our-Work.webp');
+    background-image: url('https://trinity-metals.com/wp-content/uploads/2025/02/Our-Work.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
