--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -57,7 +57,7 @@
   gap: 15px;
 }
 .newsletter-form .mb-3 {
-  width: 55%;
+  width: 46%;
 }
 .newsletter-form .email-field {
   background-color: transparent;
@@ -134,6 +134,29 @@ border-radius: 3px;
   display: flex;
   width: 100%;
   gap: 50px;
+}
+
+.mine-site-location{
+  padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 0;
+}
+.mine-site-location h4{
+font-weight: 700;
+font-size: 20px;
+line-height: 24.38px;
+letter-spacing: 0%;
+color: var(--trinity-white);
+}
+.mine-site-location ul{
+  margin-bottom: 0;
+  align-self: end;
+  list-style-type: none;
+  color: var(--trinity-white);
+  font-size: 14px;
+  padding-left: 0;
 }
 
 .contact-info-section .icon-box {
